--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Tag Docker image with commit SHA
         run: |
           IMAGE_TAG=${GITHUB_SHA}
-          docker tag ${{ secrets.DOCKER_USERNAME }}/demo-git-action:latest ${{ secrets.DOCKER_USERNAME }}/your-repo-name:${IMAGE_TAG}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/demo-git-action:latest ${{ secrets.DOCKER_USERNAME }}/demo-git-actio:${IMAGE_TAG}
           docker push ${{ secrets.DOCKER_USERNAME }}/demo-git-action:${IMAGE_TAG}
 
