--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,3 +34,6 @@ jobs:
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/demo-git-action:latest
 
+      - name: Run Docker container
+        run: docker run -d --name demo-git-action -p 8081:8081 ${{ secrets.DOCKER_USERNAME }}/demo-git-action:latest
+
